--- a/book.css
+++ b/book.css
@@ -10,7 +10,7 @@ body {
     justify-content: center;
     align-items: center;
 
-    background-color: #dfb88e;
+    background-color: white;
 }
 
 .book {
